# sonic-pi

./: .gitignore  BUILD-LINUX.md  BUILD-MAC.md  BUILD-WINDOWS.md  CHANGELOG.md  CONTRIBUTORS.md  TRANSLATION-WORKFLOW.md  appveyor.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  linux-build-gui.sh  linux-clean.sh  linux-config.sh  linux-post-tau-prod-release.sh  linux-pre-translations.sh  linux-prebuild.sh  linux-release.sh  mac-build-gui.sh  mac-clean.sh  mac-config.sh  mac-pre-translations.sh  mac-pre-vcpkg.sh  mac-release.sh  pi-build-all.sh  pi-config.sh  pi-prebuild.sh  win-clean.bat  win-config.bat  win-pre-translations.bat  win-pre-vcpkg.bat
app/api/: CMakeLists.txt
app/api-tests/: CMakeLists.txt
app/api/include/api/audio/: audio_processor.h
app/api/src/audio/: audio_processor.cpp
app/gui/: CMakeLists.txt  SonicPi.qrc  main.cpp  mainwindow.cpp  mainwindow.h
app/gui/html/: doc.html  info.html
app/gui/images/: app.icns
app/gui/lang/: sonic-pi_bg.ts  sonic-pi_bn.ts  sonic-pi_bs.ts  sonic-pi_ca.ts  sonic-pi_cs.ts  sonic-pi_da.ts  sonic-pi_de.ts  sonic-pi_el.ts  sonic-pi_en_US.ts  sonic-pi_eo.ts  sonic-pi_es.ts  sonic-pi_et.ts  sonic-pi_fa.ts  sonic-pi_fi.ts  sonic-pi_fr.ts  sonic-pi_ga.ts  sonic-pi_gl.ts  sonic-pi_he.ts  sonic-pi_hi.ts  sonic-pi_hu.ts  sonic-pi_hy.ts  sonic-pi_id.ts  sonic-pi_is.ts  sonic-pi_it.ts  sonic-pi_ja.ts  sonic-pi_ka.ts  sonic-pi_ko.ts  sonic-pi_nb.ts  sonic-pi_nl.ts  sonic-pi_pl.ts  sonic-pi_pt.ts  sonic-pi_pt_BR.ts  sonic-pi_ro.ts  sonic-pi_ru.ts  sonic-pi_si.ts  sonic-pi_sk.ts  sonic-pi_sl.ts  sonic-pi_sv.ts  sonic-pi_sw.ts  sonic-pi_ta.ts  (+9 more)
app/gui/model/: sonicpitheme.cpp
app/gui/qt/lang/: sonic-pi_de.ts  sonic-pi_fr.ts  sonic-pi_ga.ts  sonic-pi_ta.ts
app/gui/utils/: sonicpi_i18n.cpp
app/gui/widgets/: sonicpilexer.cpp  sonicpilog.cpp  sonicpilog.h  sonicpimetro.h  sonicpiscintilla.cpp
app/server/beam/tau/: CMakeLists.txt
app/server/ruby/: paths.rb
app/server/ruby/lib/sonicpi/: runtime.rb
app/server/ruby/lib/sonicpi/lang/: core.rb
app/server/ruby/lib/sonicpi/synths/: synthinfo.rb
etc/doc/lang/: sonic-pi-tutorial-cs.po  sonic-pi-tutorial-de.po  sonic-pi-tutorial-fr.po
etc/doc/tutorial/: B.01-Using-Shortcuts.md  B.02-Shortcut-Cheatsheet.md
etc/samples/: README.md
etc/synthdefs/compiled/gated/: sonic-pi-tech_saws_gated.scsyndef
etc/synthdefs/designs/overtone/sonic-pi/src/sonic_pi/: tech.clj
etc/synthdefs/designs/overtone/sonic-pi/src/sonic_pi/gated/: tech_gated.clj
etc/synthdefs/designs/supercollider/: tech_saws.scd
etc/synthdefs/designs/supercollider/gated/: tech_saws_gated.scd
install/windows/: install.bat
install/windows/wix/: LICENSE.rtf  sonic-pi-beta.wxs  sonic-pi.wxs
